--- a/vercel.json
+++ b/vercel.json
@@ -6,12 +6,9 @@
       "use": "@vercel/python"
     }
   ],
-  "install": {
-    "include": ["requirements.txt"],
-    "commands": [
+  "installCommand": [
       "python3 -m venv myenv",
       "source myenv/bin/activate",
       "pip install -r requirements.txt"
     ]
-  }
 }
